--- a/Project/StudentManagement/Views/Events/Detail.cshtml
+++ b/Project/StudentManagement/Views/Events/Detail.cshtml
@@ -1,51 +1,66 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<User> signInManager
+﻿@model StudentManagement.Models.Students.EditEvents
+
 @{
-    var user = new User();
-    string name = null;
-    if (signInManager.IsSignedIn(User))
-    {
-        user = signInManager.UserManager.FindByNameAsync(User.Identity.Name).Result;
-        name = User.Identity.Name;
-    }
-    var role = User.IsInRole("Student");
-    var id = user.Id;
+    ViewData["Title"] = "Detail";
+    Layout = "~/Views/Shared/_CreateEventLayout.cshtml";
 }
 
-@if (role)
-{
-    <h1>@name</h1>
-}
-else
-{
-    <h1>nohope</h1>
-}
-<p>@id</p>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="container">
-    <div class="chat_box">
-        <!-- <div class="head">
-            <div class="user">
-                <div class="avatar">
-                    <img src="https://picsum.photos/g/40/40" />
+<div class="page-wrapper bg-blue p-t-100 p-b-100 font-robo">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-1">
+            <div class="card-heading"></div>
+            <div class="card-body">
+                <input type="hidden" asp-for="UserId" />
+                <input type="hidden" asp-for="EventId" />
+                <div class="form-group row mb-3">
+                    <label class="control-label col-sm-2"><strong>Event:</strong></label>
+                    <div class="col-sm-12">
+                        <select asp-for="ListEventId" class="form-select" asp-items="ViewBag.ListEventId" disabled></select>
+                    </div>
                 </div>
-                <div class="name">Kai Cheng</div>
-            </div>
+                <div class="form-group row mb-3">
+                    <label class="control-label col-sm-2"><strong>School Activities:</strong></label>
+                    <div class="col-sm-12">
+                        <textarea class="form-control" asp-for="Activities" style="height: 100px;" disabled></textarea>
+                        <span asp-validation-for="Activities" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row mb-3">
+                    <label class="control-label col-sm-2"><strong>Act Yourself:</strong></label>
+                    <div class="col-sm-12">
+                        <textarea class="form-control" asp-for="Act" style="height: 100px;" disabled></textarea>
+                        <span asp-validation-for="Act" class="text-danger"></span>
+                    </div>
+                </div>
 
-        </div> -->
+                <div class="form-group row mb-3">
+                    <label class="control-label col-sm-2"><strong>The power has exerted:</strong></label>
+                    <div class="col-sm-12">
+                        <textarea class="form-control" asp-for="PowerExerted" style="height: 100px;" disabled></textarea>
+                        <span asp-validation-for="PowerExerted" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row mb-3">
+                    <label class="control-label col-sm-2"><strong>Development Power:</strong></label>
+                    <div class="col-sm-12">
+                        <textarea class="form-control" asp-for="PowerDev" style="height: 100px;" disabled></textarea>
+                        <span asp-validation-for="PowerDev" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row mb-3">
+                    <label class="control-label col-sm-2"><strong>What was thinking:</strong></label>
+                    <div class="col-sm-12">
+                        <textarea class="form-control" asp-for="Think" style="height: 100px;" disabled></textarea>
+                        <span asp-validation-for="Think" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" style="margin-top:200px;">
+    <div class="chat_box">
         <div class="body" style="overflow: auto;  ">
 
             <div class="incoming">
@@ -197,9 +212,6 @@ else
                     <div class="ellipsis dot_3"></div>
                 </div>
             </div>
-
-
-
             <div style="display: flex;  align-items: center;">
                 <div>
                     <div></div>
@@ -212,8 +224,43 @@ else
         </div>
 
         <div class="foot">
-
             <input style="border-radius: 15px; height: 50px;" type="text" class="msg" placeholder="Type a message..." />
+
+            <div class="actions d-flex align-items-center">
+                <a id="emojibtn" href="#">
+                    <i class="far fa-smile"></i>
+                </a>
+            </div>
+            <div class="emoticon-container d-none" id="emojis-container">
+                <a href="#">
+                    <input type="hidden" value=":)" />
+                    <img src="~/images/emojis/emoji1.png" />
+                </a>
+                <a href="#">
+                    <input type="hidden" value=":P" />
+                    <img src="~/images/emojis/emoji2.png" />
+                </a>
+                <a href="#">
+                    <input type="hidden" value=":O" />
+                    <img src="~/images/emojis/emoji3.png" />
+                </a>
+                <a href="#">
+                    <input type="hidden" value=":-)" />
+                    <img src="~/images/emojis/emoji4.png" />
+                </a>
+                <a href="#">
+                    <input type="hidden" value="B|" />
+                    <img src="~/images/emojis/emoji5.png" />
+                </a>
+                <a href="#">
+                    <input type="hidden" value=":D" />
+                    <img src="~/images/emojis/emoji6.png" />
+                </a>
+                <a href="#">
+                    <input type="hidden" value="<3" />
+                    <img src="~/images/emojis/emoji7.png" />
+                </a>
+            </div>
             <button type="submit">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
@@ -222,3 +269,8 @@ else
         </div>
     </div>
 </div>
+</div>
+@section Scripts{
+    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet" />
+}
