--- a/Project/StudentManagement/Views/Shared/_CreateEventLayout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_CreateEventLayout.cshtml
@@ -18,7 +18,7 @@
     <title>Home | @ViewBag.Title</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <!-- Favicons -->
     <link href="~/images/Logo.png" rel="icon">
 
@@ -96,7 +96,6 @@
     <script src="~/assets/vendor/chart.js/chart.min.js"></script>
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/echarts/echarts.min.js"></script>
-
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
     @RenderSection("Scripts", required: false)
