--- a/Project/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
     <!-- Favicons -->
     <link href="~/images/Logo.png" rel="icon">
-
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -71,15 +71,6 @@
         @RenderBody()
 
     </main><!-- End #main -->
-    <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer">
-        <div class="copyright">
-            &copy; Copyright <strong><span>Wellcome!</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-            Designed by <a href="https://bootstrapmade.com/">AIT</a>
-        </div>
-    </footer><!-- End Footer -->
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
