--- a/Project/StudentManagement/Views/Account/Login.cshtml
+++ b/Project/StudentManagement/Views/Account/Login.cshtml
@@ -22,16 +22,16 @@
                 </div>
             }
             <div class="col-12">
-                <label for="yourUsername" class="form-label">Username</label>
+                <label for="yourUsername" class="form-labe">Username</label>
                 <div class="input-group has-validation">
-                    <input type="text" asp-for="Username" class="form-control" id="yourUsername" required>
+                    <input type="text" asp-for="Username" class="form-control  shadow-none" id="yourUsername" required>
                     <div class="invalid-feedback">Please enter your username.</div>
                 </div>
             </div>
 
             <div class="col-12">
                 <label for="yourPassword" class="form-label">Password</label>
-                <input type="password" asp-for="Password" class="form-control" id="yourPassword" value="Asdf1234!" required>
+                <input type="password" asp-for="Password" class="form-control  shadow-none" id="yourPassword" value="Asdf1234!" required>
                 <div class="invalid-feedback">Please enter your password!</div>
             </div>
 
