--- a/Project/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_Layout.cshtml
@@ -20,7 +20,6 @@
 
     <!-- Favicons -->
     <link href="~/images/Logo.png" rel="icon">
-    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -33,7 +32,7 @@
     <link href="~/assets/vendor/quill/quill.snow.css" rel="stylesheet">
     <link href="~/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
     <link href="~/assets/vendor/simple-datatables/style.css" rel="stylesheet">
-
+    <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
 </head>
@@ -83,7 +82,9 @@
     <script src="~/assets/vendor/chart.js/chart.min.js"></script>
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/echarts/echarts.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script>
+    <script src="https://nightly.datatables.net/js/dataTables.bootstrap4.min.js "></script>
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
     @RenderSection("Scripts", required: false)
