--- a/Project/StudentManagement/Views/Student/Index.cshtml
+++ b/Project/StudentManagement/Views/Student/Index.cshtml
@@ -4,35 +4,43 @@
     ViewData["Title"] = "List Student";
 }
 <div class="card">
-    <div style=" height: 50px;">
-        <input class="form-control shadow-none" style="height: 65%;border: none; border-bottom:  1px solid tomato; background: none; margin-right: 30px; width: 14%; margin-left: 30px;" placeholder="Search Name..." type="text">
-        <select style="height: 65%;border: none; border-bottom:  1px solid tomato; background: none; width: 5%; margin-right: 30px;" asp-items="@ViewBag.SchoolYearId">
-        </select>
-        <select style="height: 65%;border: none; border-bottom:  1px solid tomato; background: none; width: 8%; margin-right: 30px;" asp-items="@ViewBag.ListEventId">
-        </select>
-        <input style="height: 65%;border: none; border-bottom:  1px solid tomato; background: none;" placeholder="#Skill..." type="text">
-        <button style=" border:0; background-color:white;color:blue;font-size:20px;">
-            <i class="bi bi-search"></i>
-        </button>
+    <div class="row">
+        <div class="col-12">
+            <div class="row">
+                <div class="col-7">
+                    <input class="red_ outlinenone space-left space-right" placeholder="Search Name..." type="text">
+                    <select class="red_ outlinenone space-right" style="padding-bottom:2px" asp-items="@ViewBag.SchoolYearId">
+                    </select>
+                    <select class="red_ outlinenone space-right" style="padding-bottom:2px" asp-items="@ViewBag.ListEventId">
+                    </select>
+                    <input class="red_ outlinenone space-right" placeholder="#Skill..." type="text">
+
+                    <button class="sizeIconSearch">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
+    <hr />
     <div class="card-body">
         <table class="table table-bordered">
             <thead class="thead-dark" style="background-color: #3e55df; color: white">
                 <tr>
 
-                    <th style="text-align:center">
+                    <th class="center">
                         Student Code
                     </th>
-                    <th style="text-align:center">
+                    <th class="center">
                         Name
                     </th>
-                    <th style="text-align:center">
-                        School Year
+                    <th class="center">
+                        学年
                     </th>
-                    <th style="text-align:center">
-                        Event
+                    <th class="center">
+                        イベント
                     </th>
-                    <th style="text-align:center">
+                    <th class="center">
                         Skill
                     </th>
                 </tr>
@@ -43,14 +51,14 @@
                     @if (item.Roles.Contains("Student"))
                     {
                         <tr>
-                            <td style="text-align:center">
+                            <td class="center">
                                 @item.StudentCode
                             </td>
-                            <td style="text-align:center">
+                            <td class="center">
                                 @Html.DisplayFor(modelItem => item.Username)
                             </td>
-                            <td style="text-align:center">
-                                @item.SchoolYears
+                            <td class="center">
+                                @item.UserSchoolYears
                             </td>
                             <td>
                                 <a asp-controller="Events" asp-action="Index" asp-route-userId="@item.UserId">
