--- a/Project/StudentManagement/Views/Events/Create.cshtml
+++ b/Project/StudentManagement/Views/Events/Create.cshtml
@@ -11,20 +11,20 @@
             <div class="card-body">
                 <form asp-controller="Events" asp-action="Create" method="post">
                     <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>Event:</strong></label>
+                        <label class="control-label col-sm-2"><strong>イベント選択</strong></label>
                         <div class="col-sm-12">
                             <select asp-for="ListEventId" class="form-select" asp-items="ViewBag.ListEventId"></select>
                         </div>
                     </div>
                     <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>School Activities:</strong></label>
+                        <label class="control-label col-sm-2"><strong>学校生活での出来事</strong></label>
                         <div class="col-sm-12">
                             <textarea class="form-control" asp-for="Activities" style="height: 100px;"></textarea>
                             <span asp-validation-for="Activities" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>Act Yourself:</strong></label>
+                        <label class="control-label col-sm-2"><strong>自分の行動</strong></label>
                         <div class="col-sm-12">
                             <textarea class="form-control" asp-for="Act" style="height: 100px;"></textarea>
                             <span asp-validation-for="Act" class="text-danger"></span>
@@ -32,28 +32,28 @@
                     </div>
 
                     <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>The power has exerted:</strong></label>
+                        <label class="control-label col-sm-2"><strong>発揮した力</strong></label>
                         <div class="col-sm-12">
                             <textarea class="form-control" asp-for="PowerExerted" style="height: 100px;"></textarea>
                             <span asp-validation-for="PowerExerted" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>Development Power:</strong></label>
+                        <label class="control-label col-sm-2"><strong>伸びた能力</strong></label>
                         <div class="col-sm-12">
                             <textarea class="form-control" asp-for="PowerDev" style="height: 100px;"></textarea>
                             <span asp-validation-for="PowerDev" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group row mb-3">
-                        <label class="control-label col-sm-2"><strong>What was thinking:</strong></label>
+                        <label class="control-label col-sm-2"><strong>考えたこと</strong></label>
                         <div class="col-sm-12">
                             <textarea class="form-control" asp-for="Think" style="height: 100px;"></textarea>
                             <span asp-validation-for="Think" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="p-t-20">
-                        <button class="btn btn--radius btn--green" type="submit">Submit</button>
+                    <div class="p-t-20 row">
+                        <div class="col-lg-12 text-center"><button class="btn btn--radius btn-info center" type="submit">新規</button></div>
                     </div>
                 </form>
             </div>
