--- a/Project/StudentManagement/Views/Shared/_CreateEventLayout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_CreateEventLayout.cshtml
@@ -18,10 +18,13 @@
     <title>Home | @ViewBag.Title</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <!-- Favicons -->
     <link href="~/images/Logo.png" rel="icon">
+    <!--Imoj-->>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css">
+    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -58,8 +61,7 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a class="logo d-flex align-items-center">
-                <img src="~/images/Logo.png" alt="">
-                <span class="d-none d-lg-block">Aureole IT</span>
+                <span class="d-none d-lg-block">社会人基礎力</span>
             </a>
         </div><!-- End Logo -->
         <nav class="header-nav ms-auto">
@@ -97,6 +99,8 @@
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/echarts/echarts.min.js"></script>
     <!-- Template Main JS File -->
+    <!--imoj-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"></script>
     <script src="~/assets/js/main.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
