--- a/Project/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/Project/StudentManagement/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+    <link href="~/css/site.css" rel="stylesheet" />
     <!-- Vendor CSS Files -->
     <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -44,8 +44,7 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a class="logo d-flex align-items-center">
-                <img src="~/images/Logo.png" alt="">
-                <span class="d-none d-lg-block">Aureole IT</span>
+                <span class="d-none d-lg-block">社会人基礎力</span>
             </a>
         </div><!-- End Logo -->
         <nav class="header-nav ms-auto">
